# Del-O-Matic

./: CMakeLists.txt  README.md
include/DT/: DelaunayTriangulation.hxx  Edge.hxx  GeometricPredicates.hxx  HistoryDAG.hxx  Mesh.hxx  Point.hxx  Predicates.hxx  Simplex.hxx  Timer.hxx  Triangle.hxx  TrianglesDAG.hxx  Vertex.hxx
include/Interface/: Args.hxx  CLI11.hpp  IO.hxx
inputFiles/: key.node  pipe.node
src/: main.cxx
src/DT/: DelaunayTriangulation.cxx  Edge.cxx  GeometricPredicates.cxx  HistoryDAG.cxx  KDTree.hxx  Point.cxx  Predicates.c  Simplex.cxx  Timer.cxx  Triangle.cxx  TrianglesDAG.cxx  Vertex.cxx  predicates.c
src/Interface/: Args.cxx  IO.cxx
